--- a/css/contacto.css
+++ b/css/contacto.css
@@ -5,7 +5,8 @@ header{
       background-image: url('../Image/FONDO\ \(2\).jpg');
         background-size: cover;
         background-attachment: fixed;
-        height: 600px
+        height: 600px;
+        font-family: "Montserrat", sans-serif;
       }
 
       h4{
@@ -17,50 +18,18 @@ header{
         margin-top: 1.5%;
         font-size: 12px;
       }
+.btn-outline-success {
+        color: #ffffff;
+        border-color: #ffffff;
+    }
 
-.dropdownmenu ul {
-    font-family: "Montserrat", sans-serif;
-        background-color: rgb(255, 255, 255);
-        font-size: large;
-        block-size: 25px;
-        flex: content;
-        align-items: center;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        color: #fff;
-        margin-top: 0%;
-        margin-bottom: 0%;
-        block-size: 25px;
-        flex: content;
-        align-items: center;
-        background: none;
-        list-style: none;
-      }
-      .dropdownmenu a {
-        font-family: "Montserrat", sans-serif;
-        align-items: center;
-        background: none;
-        color: #fff;
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        justify-content: center;
-        font: bold 12px/20px sans-serif;
-        padding: 10px 98px;
-        text-align: center;
-        text-decoration: none;
-        -webkit-transition: all 0.25s ease;
-        -moz-transition: all 0.25s ease;
-        -ms-transition: all 0.25s ease;
-        -o-transition: all 0.25s ease;
-        transition: all 0.25s ease;
-        font-size: large;  font-family: "Montserrat", sans-serif;
-      }
-      .dropdownmenu li:hover a {
-        background: rgb(255, 255, 255);
-        color: black; font-family: 'Montserrat', sans-serif;
-      }
+.btn-outline-success:hover {
+  color: #acacac;
+  border-color: #acacac;
+}
+.listafooter{
+  list-style: none;
+}
 
 .form{    width:340px;height:400px;
     background:#ffffff;
