--- a/css/ubicacion.css
+++ b/css/ubicacion.css
@@ -19,50 +19,24 @@
     font-size: 12px;
   }
 
-.dropdownmenu ul {
-  font-family: "Montserrat", sans-serif;
-      background-color: rgb(255, 255, 255);
-      font-size: large;
-      block-size: 25px;
-      flex: content;
-      align-items: center;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      color: #fff;
-      margin-top: 0%;
-      margin-bottom: 0%;
-      block-size: 25px;
-      flex: content;
-      align-items: center;
-      background: none;
-      list-style: none;
+
+  .btn-outline-success {
+        color: #ffffff;
+        border-color: #ffffff;
     }
-    .dropdownmenu a {
-      font-family: "Montserrat", sans-serif;
-      align-items: center;
-      background: none;
-      color: #fff;
-      display: flex;
-      flex-wrap: nowrap;
-      flex-direction: row;
-      justify-content: center;
-      font: bold 12px/20px sans-serif;
-      padding: 10px 98px;
-      text-align: center;
-      text-decoration: none;
-      -webkit-transition: all 0.25s ease;
-      -moz-transition: all 0.25s ease;
-      -ms-transition: all 0.25s ease;
-      -o-transition: all 0.25s ease;
-      transition: all 0.25s ease;
-      font-size: large;  font-family: "Montserrat", sans-serif;
-    }
-    .dropdownmenu li:hover a {
-      background: rgb(255, 255, 255);
-      color: black; font-family: 'Montserrat', sans-serif;
-    }
-    .formubicacion{font-family: "Montserrat", sans-serif;
+
+.btn-outline-success:hover {
+  color: #acacac;
+  border-color: #acacac;
+}
+.listafooter{
+  list-style: none;
+}
+
+header {
+font-family: "Montserrat", sans-serif;}
+
+.formubicacion{font-family: "Montserrat", sans-serif;
       width:660px;height: 600px;
       background:#ffffff;
       border-radius:8px;box-shadow:0 0 40px -10px #000;
