--- a/css/imagenes.css
+++ b/css/imagenes.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;}
 header{
-      background-image: url('../Image/FONDO\ \(2\).jpg');
         background-size: cover;
         background-attachment: fixed;
         width: auto;
@@ -40,7 +39,7 @@ header{
     grid-row-gap: 10px;
    grid-column-gap: 10px;
    justify-content:center ;
-   margin-top: 30px;
+   margin: 50px;
 }
 
 .imagenprueba{
