--- a/css/ubicacion.css
+++ b/css/ubicacion.css
@@ -45,7 +45,10 @@ font-family: "Montserrat", sans-serif;}
       margin-bottom: 100px;
       box-sizing:border-box;font-family: "Montserrat", sans-serif; position:relative
   }
-
+.mapagoogle{
+  width: 600px;
+  height: 450px;
+}
   .menudatos{
     content:'Hi';position:absolute;bottom:-40px;right:-20px;background:#000000;color:#fff;width:320px;padding:16px 4px 16px 0;border-radius:6px;font-size:13px;box-shadow:10px 10px 40px -14px #000; font-family: "Montserrat", sans-serif;}
     span{margin:0 5px 0 15px; font-family: "Montserrat", sans-serif;}
@@ -101,7 +104,7 @@ h2{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px
     margin-top: 16px;
   }
 
-  @media screen and (min-width: 320px) and (max-width: 480px) {
+  @media screen and (min-width: 320px) and (max-width: 700px) {
     .dropdownmenu ul{display: flex; flex-direction: column;
       background-color:rgb(0, 0, 0);
     width: 100%; height: 200px;}
@@ -109,7 +112,7 @@ h2{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px
       display: block;
     }
     header{ 
-      width: 100%; background-color: #fff; height: 850px;
+      width: 100%; background-color: #fff; height: 600px;
     }
     body{
       background-color: #fff;
@@ -133,9 +136,11 @@ h2{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px
     }
 
     .formubicacion{
-      width:445px;height: 550px;}
+      width:445px;height: 400px;}
 
-    .mapamedidas{
-      width: 330; height: 300;
-    }
+    .mapagoogle{
+        width: 300px;
+        height: 250px;
+        display: flex; justify-items: center;
+      }
 }
