--- a/css/contacto.css
+++ b/css/contacto.css
@@ -104,7 +104,7 @@ header{
         display: block;
       }
       header{ 
-        width: 100%; background-color: #fff; height: 850px;
+        width: 100%; background-color: #fff; height: 680px;
       }
       body{
         background-color: #fff;
@@ -126,5 +126,11 @@ header{
       box-shadow: 2px 2px 3px #999;
       z-index: 100;
       }
+      .form{    width:340px;height: 480px;
+        background:#ffffff;
+        border-radius:8px;box-shadow:0 0 40px -10px #000;
+        margin:calc(auto - auto) auto;padding:20px 30px;
+        max-width:calc(100vw - 40px);
+        box-sizing:border-box;font-family: "Montserrat", sans-serif; position:relative}
   
   }
