--- a/css/reserva.css
+++ b/css/reserva.css
@@ -53,16 +53,16 @@ h2{margin:10px 0;padding-bottom:10px;width:180px;color:black;border-bottom:3px s
     span{margin:0 5px 0 15px; back}
 
 .menudatos{
-  content:'Hi';
+  content: 'Hi';
   position:absolute;
-  bottom:-40px;right:-20px;
+  bottom: -40px;right:-20px;
   background: black;
-  color:#fff;
-  width:320px;
-  padding:16px 4px 16px 0;
-  border-radius:6px;
-  font-size:13px
-  ;box-shadow:10px 10px 40px -14px #000}
+  color: #fff;
+  width: 320px;
+  padding: 16px 4px 16px 0;
+  border-radius: 6px;
+  font-size: 13px;
+  box-shadow: 10px 10px 40px -14px #000}
   span{margin:0 5px 0 15px
 }
 footer {
@@ -144,6 +144,10 @@ a svg:hover #instagram {
   font-size: 30px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100;
+  }
+
+  .formreserva{
+    margin:calc(auto - auto) auto;padding:20px 30px;
   }
 
 }
