--- a/css/ubicacion.css
+++ b/css/ubicacion.css
@@ -136,7 +136,8 @@ h2{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px
     }
 
     .formubicacion{
-      width:445px;height: 400px;}
+      width:445px;height: 400px;
+      margin:calc(auto - auto) auto;padding:20px 30px;}
 
     .mapagoogle{
         width: 300px;
