--- a/css/ubicacion.css
+++ b/css/ubicacion.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   }
-  header{
+  .headermaps{
     background-image: url('../Image/FONDO\ \(2\).jpg');
     background-size: cover;
     background-attachment: fixed;
@@ -52,7 +52,7 @@ font-family: "Montserrat", sans-serif;}
   .menudatos{
     content:'Hi';position:absolute;bottom:-40px;right:-20px;background:#000000;color:#fff;width:320px;padding:16px 4px 16px 0;border-radius:6px;font-size:13px;box-shadow:10px 10px 40px -14px #000; font-family: "Montserrat", sans-serif;}
     span{margin:0 5px 0 15px; font-family: "Montserrat", sans-serif;}
-h2{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px solid #000000; font-family: "Montserrat", sans-serif;}
+.titulomaps{margin:10px 0;padding-bottom:10px;width:180px;color:#000000;border-bottom:3px solid #000000; font-family: "Montserrat", sans-serif;}
 
   footer {
     background-color: rgb(255, 255, 255); border-top:1px solid rgb(194, 194, 194);
