--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -75,7 +75,7 @@ list-style: none;
     .form{    width:340px;height: 480px;
       background:#ffffff;
       border-radius:8px;box-shadow:0 0 40px -10px #000;
-      margin:calc(auto - auto) auto;padding:20px 30px;
+      margin: calc(10vh - 40px) auto;
       max-width:calc(100vw - 40px);
       box-sizing:border-box;font-family: "Montserrat", sans-serif; position:relative}
 
