--- a/scss/partials/_reserva.scss
+++ b/scss/partials/_reserva.scss
@@ -177,7 +177,6 @@ span {
   }
 
   .formreserva {
-    margin: calc(auto - auto) auto;
-    padding: 20px 30px;
+    margin: calc(10vh - 50px) auto;
   }
 }
