--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,15 +9,17 @@
   flex-direction: column;
 }
 
+$font-color: ("gris": grey, "negro": black, "blanco": rgb(255, 255, 255));
 $gris: #acacac;
 $wp: #25d366;
+
 * {
   padding: 0;
   margin: 0;
 }
 
 .body {
-  background-color: #fff;
+  background-color: map-get($font-color, "blanco");
 }
 header {
   background-image: url("../Image/FONDO\ \(2\).jpg");
@@ -26,7 +28,7 @@ header {
   font-family: "Montserrat", sans-serif;
   height: 600px;
   h1 {
-    color: #fff;
+    color: map-get($font-color, "blanco");
     font-family: "Mrs Saint Delafield", cursive;
     text-align: center;
     font-size: 80px;
@@ -39,11 +41,11 @@ header {
     text-decoration: overline;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-    color: #fff;
+    color: map-get($font-color, "blanco");
   }
   .btn-outline-success {
-    color: #ffffff;
-    border-color: #ffffff;
+    color: map-get($font-color, "blanco");
+    border-color: map-get($font-color, "blanco");
   }
   .btn-outline-success:hover {
     color: $gris;
@@ -58,7 +60,7 @@ header {
     @include flex-column;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-    color: rgb(0, 0, 0);
+    color: map-get($font-color, "negro");
     margin-top: 1.5%;
     font-size: 12px;
   }
@@ -67,7 +69,7 @@ header {
     text-decoration: overline;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-    color: rgb(0, 0, 0);
+    color: map-get($font-color, "negro");
     margin-top: 2.5%;
     font-size: 30px;
   }
@@ -77,11 +79,11 @@ header {
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    background-color: rgb(255, 255, 255);
+    background-color: map-get($font-color, "blanco");
     justify-content: space-evenly;
     font-family: "Montserrat", sans-serif;
     font-size: large;
-    color: rgb(0, 0, 0);
+    color: map-get($font-color, "negro");
     margin-top: 5%;
     margin-bottom: 5%;
     list-style: none;
@@ -93,17 +95,17 @@ header {
     bottom: 40px;
     right: 40px;
     background-color: $wp;
-    color: #fff;
+    color: map-get($font-color, "blanco");
     border-radius: 50px;
     text-align: center;
     font-size: 30px;
-    box-shadow: 2px 2px 3px #999;
+    box-shadow: 2px 2px 3px map-get($font-color, "gris");
     z-index: 100;
   }
   .float:hover {
     text-decoration: none;
     color: $wp;
-    background-color: #fff;
+    background-color: map-get($font-color, "blanco");
   }
 
   .my-float {
@@ -112,14 +114,14 @@ header {
 }
 .botonimagen {
   text-decoration: none;
-  color: #111;
+  color: map-get($font-color, "negro");
 }
 .botonimagen:hover {
   color: $gris;
 }
 footer {
-  background-color: rgb(255, 255, 255);
-  border-top: 1px solid rgb(194, 194, 194);
+  background-color: map-get($font-color, "blanco");
+  border-top: 1px solid map-get($font-color, "gris");
   article {
     width: 100%;
     margin: 0px;
@@ -141,6 +143,6 @@ footer {
   }
   a svg:hover #facebook,
   a svg:hover #instagram {
-    fill: #111;
+    fill: map-get($font-color, "negro");
   }
 }
