--- a/scss/partials/_nosotros.scss
+++ b/scss/partials/_nosotros.scss
@@ -26,9 +26,9 @@
   .menu{
     display: block;
   }
-  header{ 
-    width: 100%; background-color: #fff; height: 1000px;
-  }
+.headernosotros{
+  height: 800px;
+}
   body{
     background-color: #fff;
   }
