--- a/scss/partials/_ubicacion.scss
+++ b/scss/partials/_ubicacion.scss
@@ -108,8 +108,7 @@ span {
   .formubicacion {
     width: 445px;
     height: 400px;
-    margin: calc(auto - auto) auto;
-    padding: 20px 30px;
+    margin: calc(130px - 100px) auto;
   }
 
   .mapagoogle {
