--- a/scss/partials/_nosotros.scss
+++ b/scss/partials/_nosotros.scss
@@ -14,7 +14,12 @@
     align-content: space-around;
   }
 .cuerponosotros{
-    color: #fff; background-color: rgba(17, 17, 17, 0.466); font-size: 15px; text-align: center; margin: 10px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255); font-size: 18px; 
+    text-align: center; 
+    margin: 0px;
+    height: auto;
+    width: auto;
   }
   
 
