--- a/css/index.css
+++ b/css/index.css
@@ -320,7 +320,7 @@ span {
   grid-column-gap: 10px;
   justify-content: center;
   background-color: #fff;
-  padding: 70px; }
+  padding: 5%; }
 
 .headerimage {
   height: auto;
@@ -448,7 +448,7 @@ span {
 .my-float {
   margin-top: 16px; }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 720px) {
   .dropdownmenu ul {
     display: flex;
     flex-direction: column;
@@ -459,13 +459,19 @@ span {
     display: block; }
   .headerimage {
     width: 100%;
-    height: 2500px;
-    background-color: #fff; }
+    height: 2550px;
+    background-color: #fff;
+    padding: 0px; }
   body {
     background-color: #fff; }
   .grid {
-    display: grid;
-    grid-template-columns: 1fr; }
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 2500px;
+    background-color: #fff; }
+  .imagen1, .imagen2, .imagen3, .imagen4, .imagen5, .imagen6, .imagen7, .imagen8, .imagen9 {
+    width: auto; }
   .footer {
     width: 100%;
     height: auto; }
@@ -611,11 +617,13 @@ span {
   align-content: space-around; }
 
 .cuerponosotros {
-  color: #fff;
-  background-color: rgba(17, 17, 17, 0.466);
-  font-size: 15px;
+  color: black;
+  background-color: white;
+  font-size: 18px;
   text-align: center;
-  margin: 10px; }
+  margin: 0px;
+  height: auto;
+  width: auto; }
 
 @media screen and (min-width: 320px) and (max-width: 700px) {
   .dropdownmenu ul {
@@ -687,61 +695,56 @@ header {
   header .listafooter {
     list-style: none; }
 
-.body h4 {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  color: black;
-  margin-top: 1.5%;
-  font-size: 12px; }
-
-.body h3 {
-  display: flex;
-  flex-direction: column;
-  text-decoration: overline;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  color: black;
-  margin-top: 2.5%;
-  font-size: 30px; }
-
-.body .Lista {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  background-color: white;
-  justify-content: space-evenly;
-  font-family: "Montserrat", sans-serif;
-  font-size: large;
-  color: black;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  list-style: none; }
-
-.body .float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 40px;
-  right: 40px;
-  background-color: #25d366;
-  color: white;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  box-shadow: 2px 2px 3px grey;
-  z-index: 100; }
-
-.body .float:hover {
-  text-decoration: none;
-  color: #25d366;
+.body {
   background-color: white; }
-
-.body .my-float {
-  margin-top: 16px; }
+  .body h4 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    color: black;
+    margin-top: 1.5%;
+    font-size: 12px; }
+  .body h3 {
+    display: flex;
+    flex-direction: column;
+    text-decoration: overline;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    color: black;
+    margin-top: 2.5%;
+    font-size: 30px; }
+  .body .Lista {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    justify-content: space-evenly;
+    font-family: "Montserrat", sans-serif;
+    font-size: large;
+    color: black;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    list-style: none; }
+  .body .float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px grey;
+    z-index: 100; }
+  .body .float:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color: white; }
+  .body .my-float {
+    margin-top: 16px; }
 
 .botonimagen {
   text-decoration: none;
@@ -772,3 +775,8 @@ footer {
   footer a svg:hover #facebook,
   footer a svg:hover #instagram {
     fill: black; }
+
+@media screen and (min-width: 320px) and (max-width: 700px) {
+  .card, .Lista {
+    display: flex;
+    flex-direction: column; } }
