--- a/scss/index.css
+++ b/scss/index.css
@@ -406,7 +406,7 @@ span {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #fff;
-  padding: 70px;
+  padding: 5%;
 }
 
 .headerimage {
@@ -563,7 +563,7 @@ span {
   margin-top: 16px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 720px) {
   .dropdownmenu ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -581,17 +581,27 @@ span {
   }
   .headerimage {
     width: 100%;
-    height: 2500px;
+    height: 2550px;
     background-color: #fff;
+    padding: 0px;
   }
   body {
     background-color: #fff;
   }
   .grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    height: 2500px;
+    background-color: #fff;
+  }
+  .imagen1, .imagen2, .imagen3, .imagen4, .imagen5, .imagen6, .imagen7, .imagen8, .imagen9 {
+    width: auto;
   }
   .footer {
     width: 100%;
@@ -783,11 +793,13 @@ span {
 }
 
 .cuerponosotros {
-  color: #fff;
-  background-color: rgba(17, 17, 17, 0.466);
-  font-size: 15px;
+  color: black;
+  background-color: white;
+  font-size: 18px;
   text-align: center;
-  margin: 10px;
+  margin: 0px;
+  height: auto;
+  width: auto;
 }
 
 @media screen and (min-width: 320px) and (max-width: 700px) {
@@ -896,6 +908,10 @@ header .listafooter {
   list-style: none;
 }
 
+.body {
+  background-color: white;
+}
+
 .body h4 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -931,14 +947,9 @@ header .listafooter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1019,5 +1030,17 @@ footer a svg #instagram {
 footer a svg:hover #facebook,
 footer a svg:hover #instagram {
   fill: black;
+}
+
+@media screen and (min-width: 320px) and (max-width: 700px) {
+  .card, .Lista {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 /*# sourceMappingURL=index.css.map */
