--- a/scss/partials/_imagenes.scss
+++ b/scss/partials/_imagenes.scss
@@ -19,7 +19,7 @@
   grid-column-gap: 10px;
   justify-content: center;
   background-color: #fff;
-  padding: 70px;
+  padding: 5%;
 }
 .headerimage {
   height: auto;
@@ -110,7 +110,7 @@
   margin-top: 16px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 720px) {
   .dropdownmenu ul {
     display: flex;
     flex-direction: column;
@@ -123,15 +123,22 @@
   }
   .headerimage {
     width: 100%;
-    height: 2500px;
+    height: 2550px;
     background-color: #fff;
+    padding: 0px;
   }
   body {
     background-color: #fff;
   }
   .grid {
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 2500px;
+    background-color: #fff;
+  }
+  .imagen1, .imagen2, .imagen3, .imagen4, .imagen5, .imagen6, .imagen7, .imagen8, .imagen9{
+    width: auto;
   }
   .footer {
     width: 100%;
