--- a/scss/partials/_imagenes.scss
+++ b/scss/partials/_imagenes.scss
@@ -27,10 +27,12 @@
 }
 
 .imagen1 {
+  @include displayimage();
   background-image: url(../../Image/1.jpeg);
 }
 
 .imagen2 {
+  @include displayimage();
   background-image: url(../../Image/2.jpeg);
 }
 
@@ -39,21 +41,27 @@
   background-image: url(../../Image/3.jpeg);
 }
 .imagen4 {
+  @include displayimage();
   background-image: url(../../Image/4.jpeg);
 }
 .imagen5 {
+  @include displayimage();
   background-image: url(../../Image/5.jpeg);
 }
 .imagen6 {
+  @include displayimage();
   background-image: url(../../Image/6.jpeg);
 }
 .imagen7 {
+  @include displayimage();
   background-image: url(../../Image/7.jpeg);
 }
 .imagen8 {
+  @include displayimage();
   background-image: url(../../Image/8.jpeg);
 }
 .imagen9 {
+  @include displayimage();
   background-image: url(../../Image/9.jpeg);
 }
 
