--- a/css/index.css
+++ b/css/index.css
@@ -328,9 +328,19 @@ span {
   background-color: #fff; }
 
 .imagen1 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/1.jpeg); }
 
 .imagen2 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/2.jpeg); }
 
 .imagen3 {
@@ -342,21 +352,51 @@ span {
   background-image: url(../../Image/3.jpeg); }
 
 .imagen4 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/4.jpeg); }
 
 .imagen5 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/5.jpeg); }
 
 .imagen6 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/6.jpeg); }
 
 .imagen7 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/7.jpeg); }
 
 .imagen8 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/8.jpeg); }
 
 .imagen9 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/9.jpeg); }
 
 .frente {
