--- a/scss/index.css
+++ b/scss/index.css
@@ -416,10 +416,20 @@ span {
 }
 
 .imagen1 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/1.jpeg);
 }
 
 .imagen2 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/2.jpeg);
 }
 
@@ -433,26 +443,56 @@ span {
 }
 
 .imagen4 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/4.jpeg);
 }
 
 .imagen5 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/5.jpeg);
 }
 
 .imagen6 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/6.jpeg);
 }
 
 .imagen7 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/7.jpeg);
 }
 
 .imagen8 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/8.jpeg);
 }
 
 .imagen9 {
+  width: 380px;
+  height: 300px;
+  padding: 5px;
+  background-position: center;
+  background-size: cover;
   background-image: url(../../Image/9.jpeg);
 }
 
