--- a/css/index.css
+++ b/css/index.css
@@ -333,7 +333,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/1.jpeg); }
+  background-image: url(../Image/1.jpeg); }
 
 .imagen2 {
   width: 380px;
@@ -341,7 +341,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/2.jpeg); }
+  background-image: url(../Image/2.jpeg); }
 
 .imagen3 {
   width: 380px;
@@ -349,7 +349,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/3.jpeg); }
+  background-image: url(../Image/3.jpeg); }
 
 .imagen4 {
   width: 380px;
@@ -357,7 +357,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/4.jpeg); }
+  background-image: url(../Image/4.jpeg); }
 
 .imagen5 {
   width: 380px;
@@ -365,7 +365,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/5.jpeg); }
+  background-image: url(../Image/5.jpeg); }
 
 .imagen6 {
   width: 380px;
@@ -373,7 +373,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/6.jpeg); }
+  background-image: url(../Image/6.jpeg); }
 
 .imagen7 {
   width: 380px;
@@ -381,7 +381,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/7.jpeg); }
+  background-image: url(../Image/7.jpeg); }
 
 .imagen8 {
   width: 380px;
@@ -389,7 +389,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/8.jpeg); }
+  background-image: url(../Image/8.jpeg); }
 
 .imagen9 {
   width: 380px;
@@ -397,7 +397,7 @@ span {
   padding: 5px;
   background-position: center;
   background-size: cover;
-  background-image: url(../../Image/9.jpeg); }
+  background-image: url(../Image/9.jpeg); }
 
 .frente {
   opacity: 0;
