--- a/scss/partials/_imagenes.scss
+++ b/scss/partials/_imagenes.scss
@@ -28,41 +28,41 @@
 
 .imagen1 {
   @include displayimage();
-  background-image: url(../../Image/1.jpeg);
+  background-image: url(../Image/1.jpeg);
 }
 
 .imagen2 {
   @include displayimage();
-  background-image: url(../../Image/2.jpeg);
+  background-image: url(../Image/2.jpeg);
 }
 
 .imagen3 {
   @include displayimage();
-  background-image: url(../../Image/3.jpeg);
+  background-image: url(../Image/3.jpeg);
 }
 .imagen4 {
   @include displayimage();
-  background-image: url(../../Image/4.jpeg);
+  background-image: url(../Image/4.jpeg);
 }
 .imagen5 {
   @include displayimage();
-  background-image: url(../../Image/5.jpeg);
+  background-image: url(../Image/5.jpeg);
 }
 .imagen6 {
   @include displayimage();
-  background-image: url(../../Image/6.jpeg);
+  background-image: url(../Image/6.jpeg);
 }
 .imagen7 {
   @include displayimage();
-  background-image: url(../../Image/7.jpeg);
+  background-image: url(../Image/7.jpeg);
 }
 .imagen8 {
   @include displayimage();
-  background-image: url(../../Image/8.jpeg);
+  background-image: url(../Image/8.jpeg);
 }
 .imagen9 {
   @include displayimage();
-  background-image: url(../../Image/9.jpeg);
+  background-image: url(../Image/9.jpeg);
 }
 
 .frente {
