--- a/scss/partials/_nosotros.scss
+++ b/scss/partials/_nosotros.scss
@@ -1,60 +1,70 @@
 .cuerpo{
-    display: flex;     
-     flex-direction: column; 
-     justify-content: center;
-     height: 600px;
-  
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 600px; 
+}
   .titulonosotros{
-    color: #fff;
-    font-family: "Mrs Saint Delafield", cursive;
-    text-align: center;
-    font-size: 70px;
-    flex-direction: column;
-    align-content: space-around;
-  }
+  color: #fff;
+  font-family: "Mrs Saint Delafield", cursive;
+  text-align: center;
+  font-size: 70px;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+}
 .cuerponosotros{
-    color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255); font-size: 18px; 
-    text-align: center; 
+    text-align: center;
     margin: 0px;
     height: auto;
     width: auto;
-  }
-  
+}
+
 
   @media screen and (min-width: 320px) and (max-width: 700px) 
 {
-  .dropdownmenu ul{display: flex; flex-direction: column;
+  .dropdownmenu ul{
+    display: flex; 
+    flex-direction: column;
     background-color:rgb(0, 0, 0);
-  width: 100%; height: 200px;}
+    width: 100%; height: 200px;}
   .menu{
     display: block;
   }
+  .cuerpo{
+    height: 1000px; 
+  }
 .headernosotros{
-  height: 800px;
-}
+  height: 1100px;
+  }
   body{
     background-color: #fff;
   }
   .footer{
     width: 100%; height: auto;
-}
+  }
   .float{
     position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 10px;
-  right: 10px;
-  background-color: #25d366;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 100;
+    width: 60px;
+    height: 60px;
+    bottom: 10px;
+    right: 10px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
   }
 .cuerponosotros{
-  text-align: center; margin: 5px;
-}
+  text-align: center; 
+  margin: 5px;
+  height: 800px;
+  }
+.titulonosotros{
+display: flex;
+  }
 }
